# semantic-complexity

./: .env.example  .gitignore  CHANGELOG.ko.md  CHANGELOG.md  CLAUDE.md  README.ko.md  README.md  THEORY.ko.md  THEORY.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: publish-go.yml  (+3 more)
docs/: CHANGELOG.ko.md  CHANGELOG.md  COMPOUND_ANTI_PATTERNS.md  EXPERIMENT_PROTOCOL.md  LLM_REFACTORING_PROTOCOL.md  MODULE_TYPES.ko.md  README.ko.md  REGULATORY_WEIGHTS.ko.md  RELEASE_EVIDENCE_THEORY.md  RESEARCH.md  SDS-WAIVER.ko.md  SDS.ko.md  SDS.md  SRS-WAIVER.ko.md  SRS.ko.md  SRS.md  STABILITY_INVARIANTS.md  THEORY.ko.md  THEORY.md
experiments/: BETA_CANDIDATES.md  CHEESE_HAM_EXPANSION.md  EXPERIMENT_MATRIX.md  PHASE-ALPHA_design.md  run_experiment.py  run_session.py
public-alpha/: README.md  SCOPE.md  STATUS.md
py/: README.md  pyproject.toml
py/semantic_complexity/: __init__.py
py/semantic_complexity/analyzers/: __init__.py  bread.py  cheese.py  ham.py
py/semantic_complexity/budget/: __init__.py  tracker.py
py/semantic_complexity/canonical/: __init__.py  detector.py
py/semantic_complexity/cli/: __init__.py
py/semantic_complexity/core/: __init__.py  canonical.py  convergence.py  invariants.py  tensor.py
py/semantic_complexity/gate/: __init__.py  mvp.py  waiver.py
py/semantic_complexity/mcp/: __init__.py
py/semantic_complexity/protected/: __init__.py  patterns.py
py/semantic_complexity/recommend/: __init__.py  gradient.py
py/semantic_complexity/simplex/: __init__.py  equilibrium.py  labeler.py  normalizer.py
py/semantic_complexity/types/: __init__.py  axis.py  module.py  profile.py  score.py
py/tests/: __init__.py  test_canonical.py  test_cli.py  test_cognitive.py  test_convergence.py  test_core.py  test_tensor.py
(+736 files in other folders)
